<resources>
    <string name="appName">Royal Bank</string>
    <string name="titleActivityDashboard">Dashboard</string>
    <string name="titleHome">Home</string>
    <string name="titleDashboard">Dashboard</string>
    <string name="titleNotifications">Notifications</string>
    <string name="royalBank">ROYAL BANK</string>
    <string name="enterCredentialsLogin">Enter Credentials for Login</string>
    <string name="enterUsername">Enter User Name</string>
    <string name="enterMPin">Enter MPin</string>
    <string name="login">Login</string>
    <string name="newUser">New User? SignUp here</string>
    <string name="sendMoney">Send Money</string>
    <string name="depositMoney">Deposit Money</string>
    <string name="viewBalance">View Balance</string>
    <string name="userDetails">User Details</string>
    <string name="name">Name :</string>
    <string name="UserName">User Name :</string>
    <string name="mPin">MPin :</string>
    <string name="balance">Balance :</string>
    <string name="enterAmount">Enter Amount Here</string>
    <string name="submit">Submit</string>
    <string name="balanceIs">Your Balance is :</string>
    <string name="transactionSuccessful">Transaction Successful</string>
    <string name="debitMsg">Amount has been Debited from Your account "\n\n"Your available balance is : ₹ </string>
    <string name="creditMsg">Amount has been Credited to Your Account Successfully"\n\n"Your available balance is : ₹ </string>
    <string name="emptyField">Field is Empty</string>
    <string name="oops">OOPS!</string>
    <string name="userExists">Seems User Name is already Taken..</string>
    <string name="mPinMismatch">Your MPin does not Match..</string>
    <string name="enterAmtFirst">Enter Amount First</string>
    <string name="noEnoughBalance">Seems You do no have Enough Balance</string>
    <string name="logout">Log Out!</string>
    <string name="logoutMsg">Do You Want to Logout?</string>
    <string name="register">Register</string>
    <string name="existingUser">Existing User? Click here to Sign In</string>
    <string name="enterCredentialsSignup">Fill your details for Registration</string>
    <string name="confirmMPin">Confirm MPin</string>
    <string name="nameSignup">Enter Name</string>
    <string name="alreadyLoggedIn">Already Logged In!</string>
    <string name="alreadyLoggedInText">The Session is Expired. "\n\n"Please Click on OK for Re-initiating Login</string>
    <string name="listHeader">Transaction History</string>
    <string name="enterValidAmount">Enter Valid Amount</string>
</resources>