<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Signup">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/mainText"
        android:text="@string/royalBank"
        android:layout_margin="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="317dp"
        android:layout_height="590dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="175dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:text="@string/enterCredentialsSignup"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            style="@style/signupText"/>
        <EditText
            android:id="@+id/signupName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/nameSignup"
            android:background="@drawable/linearbg"
            style="@style/SignupName"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/userName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            style="@style/SignupUserName"
            android:hint="@string/enterUsername"
            android:background="@drawable/linearbg"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="text"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/signupPin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enterMPin"
            android:background="@drawable/linearbg"
            style="@style/signupPin"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="numberPassword"
            android:maxLength="6"/>
        <EditText
            android:id="@+id/confirmPin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/linearbg"
            style="@style/confirmPin"
            android:hint="@string/confirmMPin"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="numberPassword"
            android:maxLength="6"/>
        <android.widget.Button
            android:id="@+id/signupPageButton"
            style="@style/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:background="@drawable/buttonbg"
            android:inputType="number" />
        <TextView
            android:id="@+id/linkForSignIn"
            android:layout_width="match_parent"
            style="@style/existingUser"
            android:textStyle="italic"
            android:text="@string/existingUser"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>