<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Dashboard">

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/view"
        android:background="@drawable/top_for_dashboard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
         />

    <TextView
        android:id="@+id/textView2"
        style="@style/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/royalBank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/accountDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/person" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="608dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintVertical_bias="0.0">


        <View
            android:id="@+id/view5"
            android:layout_width="321dp"
            android:layout_height="125dp"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view6"
            android:layout_width="321dp"
            android:layout_height="125dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view5" />
        <View
            android:id="@+id/view7"
            android:layout_width="321dp"
            android:layout_height="125dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view6" />

        <TextView
            android:id="@+id/sendMoney"
            style="@style/sendMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendMoney"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toTopOf="@+id/view5" />

        <TextView
            android:id="@+id/depositMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/depositMoney"
            android:text="@string/depositMoney"
            app:layout_constraintBottom_toBottomOf="@+id/view6"
            app:layout_constraintEnd_toEndOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/view6"
            app:layout_constraintTop_toTopOf="@+id/view6" />

        <TextView
            android:id="@+id/viewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/viewBalance"
            android:text="@string/viewBalance"
            app:layout_constraintBottom_toBottomOf="@+id/view7"
            app:layout_constraintEnd_toEndOf="@+id/view7"
            app:layout_constraintStart_toStartOf="@+id/view7"
            app:layout_constraintTop_toTopOf="@+id/view7" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>